--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,72 @@ p {
     font-size: 40px;
     margin-top: 70px;
 }
+
+
+
+.main-container {
+    max-width: 1080px;
+    margin: 0 auto;
+    border: 1px solid red;
+    padding: 120px 20px;
+}
+
+
+.plan-box {
+    justify-content: space-between;
+}
+
+
+.plan {
+    width: calc(100% / 3);
+    border: 1px solid red;
+}
+
+
+.plan-title {
+    text-align: center;
+    border-bottom: 1px solid gray;
+    padding: 10px 0;
+}
+
+
+
+.plan-container {
+    padding: 10px 30px;
+}
+
+
+.plan-description {
+    margin: 30px 0;
+}
+
+
+
+.plan-content {
+    margin: 30px 0;
+}
+
+
+
+.plan-content-item i {
+    margin-right: 5px;
+    margin-bottom: 20px;
+}
+
+
+.buy {
+    margin: 30px 0;
+}
+
+
+
+.buy .button {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.option a {
+    text-decoration: underline;
+    color: var(--blue);
+}
