--- a/css/style.css
+++ b/css/style.css
@@ -371,8 +371,8 @@ p {
 
 
 .card {
-    width: calc((100% - 180px) / 3);
-    margin: 20px 30px;
+    width: calc((100% - 160px) / 3);
+    margin: 20px 0;
 }
 
 
@@ -384,4 +384,23 @@ p {
 
 .card-image img {
     width: 100%;
+}
+
+
+
+
+.use-info {
+    width: 50%;
+    margin-top: 120px;
+}
+
+
+.use-info h2 {
+    margin-bottom: 50px;
+}
+
+
+.use-info span a {
+    color: var(--blue);
+    text-decoration: underline;
 }
