--- a/css/style.css
+++ b/css/style.css
@@ -466,3 +466,46 @@ p {
     margin: 0;
     width: 50%;
 }
+
+
+
+.questions-box {
+    padding: 30px 0;
+    border-top: 1px solid var(--dark-gray);
+}
+
+
+.questions-items {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.questions-box h4 {
+    margin: 0;
+}
+
+.questions-box i {
+    margin-right: 40px;
+    transition: all 1s ease;
+}
+
+
+.last {
+    border-bottom: 1px solid var(--dark-gray);
+}
+
+.questions-hidden {
+    height: 0px;
+    overflow: hidden;
+    transition: all 1s ease;
+}
+
+.questions-box:hover .questions-hidden {
+    height: 80px;
+    padding: 10px 0;
+}
+
+
+.questions-box:hover i {
+    transform: rotate(180deg);
+}
