--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,16 @@
     --gray: #eaeaeb;
     --dark-gray: #928d90;
     --button: #4d90ff;
+    --square: #f5f5f5;
+    --green: #a2d39b;
+    --brown: #61082b;
+    --pacific-blue: #0093ce;
+    --torch-red: #ff1c1c;
+    --red: #d5001f;
+    --spindle: #b4d0e7;
+    --catalina-blue: #0d2481;
+    --yellow: #ffd830;
+
 }
 
 html {
@@ -115,6 +125,7 @@ p {
     line-height: 48px;
     padding: 0 10px;
     margin: 0 20px;
+    cursor: pointer;
 }
 
 .menu-box ul li:hover {
@@ -158,7 +169,7 @@ p {
 .hero-button {
     width: 260px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 
@@ -244,7 +255,7 @@ p {
 
 .arrow {
     font-size: 40px;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 
@@ -363,7 +374,7 @@ p {
 
 
 .small-line {
-    width: 55px;
+    width: 65px;
     border-top: 1px solid var(--dark-gray);
     margin-bottom: 55px;
 }
@@ -474,7 +485,7 @@ p {
 
 
 .use-info {
-    width: 50%;
+    width: 60%;
     margin-top: 120px;
 }
 
@@ -494,9 +505,9 @@ p {
 
 
 .test-container {
-    width: 100vw;
+    width: 100%;
     justify-content: flex-start;
-    align-items: center;
+    align-items: stretch;
 }
 
 
@@ -505,7 +516,24 @@ p {
     width: calc(100vw / 3);
     height: 33.33vw;
     flex-wrap: wrap;
-    border: 1px solid red;
+    background-color: var(--square);
+}
+
+
+
+.middle-square {
+    padding: 3%;
+}
+
+
+.middle-square p {
+    margin: 10% 0;
+}
+
+
+.middle-square img {
+    width: 40%;
+    margin-bottom: 30px;
 }
 
 
@@ -514,7 +542,6 @@ p {
     background-color: #0061ff;
     width: calc(100% / 2);
     height: calc(100% / 2);
-    border: 1px solid red;
 }
 
 
@@ -525,6 +552,46 @@ p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    filter: invert(1);
+}
+
+
+.logo-square-green {
+    background-color: var(--green);
+}
+
+
+.logo-square-brown {
+    background-color: var(--brown);
+}
+
+.logo-square-pacific-blue {
+    background-color: var(--pacific-blue);
+}
+
+
+.logo-square-torch-red {
+    background-color: var(--torch-red);
+}
+
+
+
+.logo-square-red {
+    background-color: var(--red);
+}
+
+.logo-square-spindle {
+    background-color: var(--spindle);
+}
+
+
+.logo-square-catalina-blue {
+    background-color: var(--catalina-blue);
+}
+
+
+.logo-square-yellow {
+    background-color: var(--yellow);
 }
 
 
@@ -619,6 +686,7 @@ p {
 
 .footer-col ul li {
     margin: 10px 0;
+    cursor: pointer;
 }
 
 
