sing-up-page/footer

--- a/css/sing-up.css
+++ b/css/sing-up.css
@@ -49,6 +49,7 @@ h4 {
 
 a {
     text-decoration: none;
+    color: var(--blue);
 }
 
 
@@ -64,6 +65,8 @@ a {
     position: fixed;
     top: 0;
     left: 0;
+    background-color: var(--light);
+    z-index: 1000;
     border-bottom: 2px solid var(--dark-gray);
 }
 
@@ -88,6 +91,11 @@ a {
     border: 1px solid var(--blue);
     border-radius: 4px;
     padding: 10px 10px;
+}
+
+
+.button a:hover {
+    text-decoration: none;
 }
 
 
@@ -140,6 +148,11 @@ a {
 }
 
 
+.title a:hover {
+    text-decoration: underline;
+}
+
+
 
 .input-item {
     width: 100%;
@@ -153,6 +166,11 @@ a {
     height: 30px;
     padding: 10px;
     border: 1px solid var(--dark-gray);
+}
+
+
+.input-item input:focus {
+    outline: none;
 }
 
 
@@ -199,4 +217,52 @@ a {
     width: 50px;
     height: 39px;
     border-right: 1px solid var(--dark-gray);
+}
+
+
+
+.footer {
+    width: 100%;
+}
+
+
+
+
+.footer-box {
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px 0;
+    border-top: 1px solid var(--dark-gray);
+    justify-content: space-around;
+    color: var(--dark-gray);
+}
+
+
+
+.footer-box ul li {
+    list-style: none;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+
+
+
+.footer-box ul li:hover {
+    text-decoration: underline;
+}
+
+
+
+
+.language {
+    width: 110px;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+
+
+.language span:hover {
+    text-decoration: underline;
 }
